# argparse-cpp

./: .gitignore  CLAUDE.md  README.md
.github/: release-drafter.yml
.github/workflows/: auto-release.yml  release-drafter.yml  version-check.yml
.serena/: project.yml
.serena/memories/: coding_conventions.md  development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.spec-workflow/approvals/argparse-core/: approval_1757381855082_zo6asktvo.json  approval_1757386919308_ykz8cagv3.json  approval_1757403146748_6lkmu6987.json  approval_1757463508888_4clg1nmx8.json
.spec-workflow/specs/argparse-core/: design.md  requirements.md  tasks.md
.spec-workflow/specs/argparse-core/changelog/: 2025-09-09-BUGFIX-store_true_default_values.md  2025-09-09-BUGFIX-string-literal-support.md  2025-09-10-BREAKING-type-template-method.md  README.md
.spec-workflow/specs/argparse-core/known-issues/: 2025-09-09-README-implementation-mismatch.md
.spec-workflow/specs/argparse-core/known-issues/closed/: 2025-09-09-README-implementation-mismatch.md  README.md
.spec-workflow/steering/: product.md  structure.md  tech.md
examples/basic/: hello_world.cpp
include/argparse/: argparse.hpp
scripts/: update-version.sh
tests/: CMakeLists.txt
tests/integration/: python_compat_test.cpp
tests/unit/: action_test.cpp  anyvalue_test.cpp  argument_classification_test.cpp  argument_group_test.cpp  argument_parser_test.cpp  argument_test.cpp  basic_structure_test.cpp  choices_test.cpp  error_message_test.cpp  help_generator_test.cpp  help_option_test.cpp  metavar_test.cpp  namespace_test.cpp  nargs_test.cpp  parse_args_test.cpp  parser_integration_test.cpp  parser_test.cpp  required_test.cpp  tokenizer_test.cpp  type_converter_test.cpp
